* fixed crash when index out of bound

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ img {
 
 .wa-900px {
   width: 900px;
+  min-width: 400px;
 }
 
 .react-switch {
